breadcrumbs link spacing fix

--- a/src/styles/views/breadcrumbs.less
+++ b/src/styles/views/breadcrumbs.less
@@ -14,7 +14,7 @@
 
   li {
     display: inline-block;
-    margin-right: @baseline/4;
+    //margin-right: @baseline/4;
 
     a span {
       color: @c-navbar-content;
